# contrib_freetype-shared

./: CMakeLists.txt
